--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
     <section id="info-ebro" class="info-ebro">
       <h2>Sobre el río Ebro</h2>
       <p>
-        El río Ebro es el más caudaloso de España y uno de los más importantes de la Península Ibérica. A lo largo de su recorrido, el Ebro alberga una gran diversidad de especies de peces, tanto autóctonas como introducidas, convirtiéndose en un ecosistema de alto valor ecológico y pesquero.
+        El río Ebro es el río más caudaloso y uno de los más largos de la península ibérica, con más de 900 kilómetros de recorrido desde su nacimiento en Fontibre (Cantabria) hasta su desembocadura en el mar Mediterráneo, en el espectacular delta del Ebro, en Tarragona. Su cuenca hidrográfica es la más extensa de España, abarcando regiones como La Rioja, Navarra, Aragón y Cataluña.
+        Gracias a su gran diversidad de hábitats, el Ebro alberga una rica fauna acuática y es un ecosistema fundamental para cientos de especies. En sus aguas habitan peces autóctonos como la carpa común, el barbo del Ebro, la trucha común y el siluro, entre otros. También se encuentran especies exóticas que han sido introducidas con el tiempo, algunas de las cuales han alterado el equilibrio natural del río.
+        Además de su importancia ecológica, el río Ebro es clave para la agricultura, la pesca deportiva y el turismo de naturaleza. Las orillas del Ebro son el hogar de numerosas aves, anfibios y mamíferos que dependen de su caudal para sobrevivir, especialmente en el Parque Natural del Delta del Ebro, una de las zonas húmedas más importantes de Europa.
+        El cuidado del ecosistema del Ebro es vital para preservar su biodiversidad y garantizar que futuras generaciones puedan disfrutar de este tesoro natural. La educación ambiental, la pesca sostenible y la protección de especies autóctonas son esenciales para conservar este entorno único.
       </p>
     </section>
 
