--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Peces del río Ebro: Autóctonos y Alóctonos | ebropeces</title>
   <meta name="description" content="Descubre todas las especies de peces del río Ebro en España. Información detallada, imágenes y enlaces a fichas de peces autóctonos y alóctonos.">
   <meta name="keywords" content="peces río Ebro, peces autóctonos Ebro, peces invasores Ebro, especies de peces, fauna acuática Ebro, ebropeces, biodiversidad Ebro, pesca en el Ebro">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/index.html">
-  <link rel="alternate" href="https://tusitio.com/index.html" hreflang="es" />
+  <meta name="robots" content="index, follow">
+
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/">
+  <link rel="alternate" href="https://mgb42x.github.io/ebropeces/" hreflang="es" />
+
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Peces del río Ebro | ebropeces">
   <meta property="og:description" content="Guía visual y descriptiva de los peces autóctonos y alóctonos del río Ebro en España. Descubre su diversidad y aprende más.">
-  <meta property="og:url" content="https://tusitio.com/">
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/">
   <meta property="og:site_name" content="ebropeces">
-  <meta property="og:image" content="https://tusitio.com/img/og-ebropeces.jpg">
+  <meta property="og:image" content="https://mgb42x.github.io/ebropeces/img/og-ebropeces.jpg">
+
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Peces del río Ebro | ebropeces">
   <meta name="twitter:description" content="Guía visual y descriptiva de los peces autóctonos y alóctonos del río Ebro en España. Descubre su diversidad y aprende más.">
-  <meta name="twitter:image" content="https://tusitio.com/img/og-ebropeces.jpg">
+  <meta name="twitter:image" content="https://mgb42x.github.io/ebropeces/img/og-ebropeces.jpg">
 </head>
 <body>
   <header>
