--- a/peces/alburno.html
+++ b/peces/alburno.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Alburno (Alburnus alburnus) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Todo sobre el Alburno (Alburnus alburnus) en el Ebro: características, hábitat, alimentación, reproducción y curiosidades.">
-  <meta name="keywords" content="alburno, Alburnus alburnus, especies invasoras Ebro, ficha alburno, peces río Ebro, ebropeces">
+  <title>Alburno (Alburnus alburnus) | Especie invasora del Ebro | ebropeces</title>
+  <meta name="description" content="Información completa sobre el Alburno (Alburnus alburnus), especie invasora en el río Ebro: identificación, hábitat, alimentación y su impacto ecológico.">
+  <meta name="keywords" content="alburno, Alburnus alburnus, especie invasora Ebro, peces Ebro, fauna acuática Ebro, peces río Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/alburno.html">
-  <link rel="alternate" href="https://tusitio.com/peces/alburno.html" hreflang="es" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/alburno.html">
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/alburno.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="Alburno (Alburnus alburnus) | Ficha completa | ebropeces">
+  <meta property="og:description" content="Ficha técnica del Alburno: origen, hábitat, comportamiento y situación en el río Ebro.">
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/alburno.html">
+  <meta property="og:site_name" content="ebropeces">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Alburno | Especie invasora del Ebro | ebropeces">
+  <meta name="twitter:description" content="Conoce al Alburno (Alburnus alburnus), su distribución, hábitos y efectos en la fauna del río Ebro.">
 </head>
 <body>
   <header>
