--- a/peces/amur-blanco.html
+++ b/peces/amur-blanco.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Amur blanco o carpa herbívora (Ctenopharyngodon idella) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Toda la información sobre el Amur blanco o carpa herbívora (Ctenopharyngodon idella) en el Ebro: características, hábitat, alimentación, reproducción e impacto ecológico.">
-  <meta name="keywords" content="amur blanco, carpa herbívora, Ctenopharyngodon idella, peces invasores Ebro, ficha amur blanco, ebropeces">
+  <title>Amur blanco (Ctenopharyngodon idella) | Especie invasora del Ebro | ebropeces</title>
+  <meta name="description" content="Información completa sobre el Amur blanco (Ctenopharyngodon idella), especie invasora en el río Ebro: identificación, hábitat, alimentación y efectos ecológicos.">
+  <meta name="keywords" content="amur blanco, Ctenopharyngodon idella, especie invasora Ebro, peces Ebro, peces río Ebro, fauna acuática Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/amur-blanco.html">
-  <link rel="alternate" href="https://tusitio.com/peces/amur-blanco.html" hreflang="es" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/amur-blanco.html">
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/amur-blanco.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="Amur blanco (Ctenopharyngodon idella) | Ficha completa | ebropeces">
+  <meta property="og:description" content="Ficha técnica del Amur blanco: origen, hábitat, alimentación y situación como especie invasora en el río Ebro.">
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/amur-blanco.html">
+  <meta property="og:site_name" content="ebropeces">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Amur blanco | Especie invasora del Ebro | ebropeces">
+  <meta name="twitter:description" content="Conoce al Amur blanco (Ctenopharyngodon idella), sus características, hábitat y su impacto en el ecosistema del río Ebro.">
 </head>
 <body>
   <header>
