--- a/peces/barbo-comun.html
+++ b/peces/barbo-comun.html
@@ -3,27 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Barbo común (Barbus bocagei) | Ficha y detalles | ebropeces</title>
-  <meta name="description" content="Toda la información sobre el Barbo común (Barbus bocagei): distribución, hábitat, alimentación, reproducción, curiosidades y estado de conservación en el río Ebro.">
-  <meta name="keywords" content="barbo común, Barbus bocagei, peces autóctonos Ebro, ficha barbo, peces río Ebro, ebropeces, fauna ibérica, pesca Ebro">
+  <title>Barbo común (Luciobarbus bocagei) | Pez autóctono del Ebro | ebropeces</title>
+  <meta name="description" content="Información completa sobre el Barbo común (Luciobarbus bocagei), pez autóctono del río Ebro: morfología, hábitat, reproducción y ecología.">
+  <meta name="keywords" content="barbo común, Luciobarbus bocagei, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, biodiversidad Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/barbo-comun.html">
-  <link rel="alternate" href="https://tusitio.com/peces/barbo-comun.html" hreflang="es" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/barbo-comun.html">
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/barbo-comun.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
-  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="Barbo común (Barbus bocagei) | ebropeces">
-  <meta property="og:description" content="Ficha completa del Barbo común, pez autóctono del río Ebro. Características, hábitat, alimentación, reproducción y estado de conservación.">
-  <meta property="og:url" content="https://tusitio.com/peces/barbo-comun.html">
+  <meta property="og:title" content="Barbo común (Luciobarbus bocagei) | Ficha completa | ebropeces">
+  <meta property="og:description" content="Ficha técnica del Barbo común: distribución, comportamiento, alimentación y papel ecológico en el río Ebro.">
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/barbo-comun.html">
   <meta property="og:site_name" content="ebropeces">
-  <!-- Si tienes imagen ponla aquí -->
-  <!-- <meta property="og:image" content="https://tusitio.com/img/barbo-comun.jpg"> -->
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Barbo común (Barbus bocagei) | ebropeces">
-  <meta name="twitter:description" content="Ficha completa del Barbo común, pez autóctono del río Ebro. Características, hábitat, alimentación, reproducción y estado de conservación.">
-  <!-- <meta name="twitter:image" content="https://tusitio.com/img/barbo-comun.jpg"> -->
+  <meta name="twitter:title" content="Barbo común | Pez autóctono del Ebro | ebropeces">
+  <meta name="twitter:description" content="Conoce al Barbo común (Luciobarbus bocagei), su hábitat, comportamiento y relevancia en el ecosistema del Ebro.">
 </head>
 <body>
   <header>
