--- a/peces/barbo-montana.html
+++ b/peces/barbo-montana.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Barbo de montaña (Barbus meridionalis) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Descubre al Barbo de montaña (Barbus meridionalis), una especie autóctona del Ebro. Ficha completa: características, hábitat, alimentación, reproducción y conservación.">
-  <meta name="keywords" content="barbo de montaña, Barbus meridionalis, peces autóctonos Ebro, ficha barbo montaña, peces río Ebro, ebropeces, fauna ibérica, pesca Ebro">
+  <title>Barbo de montaña (Luciobarbus graellsii) | Pez autóctono del Ebro | ebropeces</title>
+  <meta name="description" content="Información completa sobre el Barbo de montaña (Luciobarbus graellsii), pez autóctono del río Ebro: características, hábitat, reproducción y conservación.">
+  <meta name="keywords" content="barbo de montaña, Luciobarbus graellsii, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, barbo Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/barbo-montana.html">
-  <link rel="alternate" href="https://tusitio.com/peces/barbo-montana.html" hreflang="es" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/barbo-montana.html">
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/barbo-montana.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="Barbo de montaña (Luciobarbus graellsii) | Ficha completa | ebropeces">
+  <meta property="og:description" content="Ficha técnica del Barbo de montaña: hábitat, comportamiento, alimentación y presencia en el río Ebro.">
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/barbo-montana.html">
+  <meta property="og:site_name" content="ebropeces">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Barbo de montaña | Pez autóctono del Ebro | ebropeces">
+  <meta name="twitter:description" content="Conoce al Barbo de montaña (Luciobarbus graellsii), sus costumbres, hábitat y rol ecológico en el río Ebro.">
 </head>
 <body>
   <header>
