--- a/peces/bermejuela.html
+++ b/peces/bermejuela.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Bermejuela (Achondrostoma arcasii) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Ficha de la Bermejuela (Achondrostoma arcasii), pez autóctono del Ebro: características, hábitat, alimentación, reproducción y conservación.">
-  <meta name="keywords" content="bermejuela, Achondrostoma arcasii, peces autóctonos Ebro, ficha bermejuela, peces río Ebro, ebropeces">
+  <title>Bermejuela (Achondrostoma arcasii) | Pez autóctono del Ebro | ebropeces</title>
+  <meta name="description" content="Todo sobre la Bermejuela (Achondrostoma arcasii), especie autóctona del río Ebro: morfología, distribución, alimentación y estado de conservación.">
+  <meta name="keywords" content="bermejuela, Achondrostoma arcasii, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, peces pequeños Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/bermejuela.html">
-  <link rel="alternate" href="https://tusitio.com/peces/bermejuela.html" hreflang="es" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/bermejuela.html">
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/bermejuela.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="Bermejuela (Achondrostoma arcasii) | Ficha completa | ebropeces">
+  <meta property="og:description" content="Ficha técnica de la Bermejuela: hábitat, comportamiento, ecología y su situación en el río Ebro.">
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/bermejuela.html">
+  <meta property="og:site_name" content="ebropeces">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Bermejuela | Pez autóctono del Ebro | ebropeces">
+  <meta name="twitter:description" content="Conoce la Bermejuela (Achondrostoma arcasii), una especie autóctona del río Ebro en peligro por la alteración de su hábitat.">
 </head>
 <body>
   <header>
