--- a/peces/black-bass.html
+++ b/peces/black-bass.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Black bass (Micropterus salmoides) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Descubre el Black bass (Micropterus salmoides), especie introducida en el Ebro para pesca deportiva. Características, hábitat, alimentación y curiosidades.">
-  <meta name="keywords" content="black bass, Micropterus salmoides, peces invasores Ebro, ficha black bass, pesca deportiva, ebropeces">
+  <title>Black bass (Micropterus salmoides) | Especie invasora del Ebro | ebropeces</title>
+  <meta name="description" content="Todo sobre el Black bass (Micropterus salmoides), especie invasora del río Ebro: identificación, comportamiento, hábitat y efectos sobre el ecosistema.">
+  <meta name="keywords" content="black bass, Micropterus salmoides, pez depredador Ebro, especie invasora Ebro, pesca deportiva Ebro, peces río Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/black-bass.html">
-  <link rel="alternate" href="https://tusitio.com/peces/black-bass.html" hreflang="es" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/black-bass.html">
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/black-bass.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="Black bass (Micropterus salmoides) | Ficha completa | ebropeces">
+  <meta property="og:description" content="Ficha técnica del Black bass: morfología, hábitat, dieta y su impacto como especie invasora en el Ebro.">
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/black-bass.html">
+  <meta property="og:site_name" content="ebropeces">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Black bass | Especie invasora del Ebro | ebropeces">
+  <meta name="twitter:description" content="Conoce al Black bass (Micropterus salmoides), pez depredador introducido en el río Ebro y su efecto en la biodiversidad local.">
 </head>
 <body>
   <header>
