--- a/peces/carpa-comun.html
+++ b/peces/carpa-comun.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Carpa común (Cyprinus carpio) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Toda la información sobre la Carpa común (Cyprinus carpio) en el Ebro: características, hábitat, alimentación, reproducción, impacto ecológico y curiosidades.">
-  <meta name="keywords" content="carpa común, Cyprinus carpio, peces invasores Ebro, ficha carpa, pesca deportiva Ebro, ebropeces">
+  <title>Carpa común (Cyprinus carpio) | Especie invasora del Ebro | ebropeces</title>
+  <meta name="description" content="Descubre todo sobre la Carpa común (Cyprinus carpio), especie invasora del río Ebro: origen, características, hábitat y su impacto ecológico.">
+  <meta name="keywords" content="carpa común, Cyprinus carpio, especie invasora Ebro, peces Ebro, peces río Ebro, carpas España, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/carpa-comun.html">
-  <link rel="alternate" href="https://tusitio.com/peces/carpa-comun.html" hreflang="es" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/carpa-comun.html">
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/carpa-comun.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="Carpa común (Cyprinus carpio) | Ficha completa | ebropeces">
+  <meta property="og:description" content="Ficha técnica de la Carpa común: morfología, alimentación, reproducción y su efecto como especie invasora en el Ebro.">
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/carpa-comun.html">
+  <meta property="og:site_name" content="ebropeces">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Carpa común | Especie invasora del Ebro | ebropeces">
+  <meta name="twitter:description" content="Conoce la Carpa común (Cyprinus carpio), sus características y su papel como especie exótica invasora en el río Ebro.">
 </head>
 <body>
   <header>
