--- a/peces/carpin.html
+++ b/peces/carpin.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Carpín (Carassius auratus y Carassius gibelio) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Información sobre el Carpín (Carassius auratus y Carassius gibelio) en el Ebro: características, hábitat, alimentación, reproducción e impacto ecológico.">
-  <meta name="keywords" content="carpín, Carassius auratus, Carassius gibelio, peces invasores Ebro, ficha carpín, ebropeces">
+  <title>Carpín (Squalius pyrenaicus) | Pez autóctono del Ebro | ebropeces</title>
+  <meta name="description" content="Ficha completa del Carpín (Squalius pyrenaicus), pez autóctono del río Ebro: características, hábitat, alimentación y comportamiento.">
+  <meta name="keywords" content="carpín, Squalius pyrenaicus, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/carpin.html">
-  <link rel="alternate" href="https://tusitio.com/peces/carpin.html" hreflang="es" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/carpin.html">
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/carpin.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="Carpín (Squalius pyrenaicus) | Ficha completa | ebropeces">
+  <meta property="og:description" content="Información detallada del Carpín: distribución, ecología y hábitos en el río Ebro.">
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/carpin.html">
+  <meta property="og:site_name" content="ebropeces">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Carpín | Pez autóctono del Ebro | ebropeces">
+  <meta name="twitter:description" content="Conoce al Carpín (Squalius pyrenaicus), un pez autóctono del río Ebro con importante papel ecológico.">
 </head>
 <body>
   <header>
