--- a/peces/colmilleja.html
+++ b/peces/colmilleja.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Colmilleja (Cobitis paludica) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Información completa sobre la Colmilleja (Cobitis paludica) en el río Ebro: características, hábitat, alimentación, reproducción y curiosidades.">
-  <meta name="keywords" content="colmilleja, Cobitis paludica, peces autóctonos Ebro, ficha colmilleja, peces río Ebro, ebropeces">
+  <title>Colmilleja (Cobitis paludica) | Pez autóctono del Ebro | ebropeces</title>
+  <meta name="description" content="Ficha completa de la Colmilleja (Cobitis paludica), pez autóctono del río Ebro: morfología, hábitat, alimentación y comportamiento.">
+  <meta name="keywords" content="colmilleja, Cobitis paludica, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, peces bentónicos Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/colmilleja.html">
-  <link rel="alternate" href="https://tusitio.com/peces/colmilleja.html" hreflang="es" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/colmilleja.html">
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/colmilleja.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="Colmilleja (Cobitis paludica) | Ficha completa | ebropeces">
+  <meta property="og:description" content="Información detallada sobre la Colmilleja: distribución, comportamiento y ecología en el río Ebro.">
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/colmilleja.html">
+  <meta property="og:site_name" content="ebropeces">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Colmilleja | Pez autóctono del Ebro | ebropeces">
+  <meta name="twitter:description" content="Conoce a la Colmilleja (Cobitis paludica), un pez bentónico autóctono del río Ebro con un papel ecológico importante.">
 </head>
 <body>
   <header>
