--- a/peces/esturion-danubio.html
+++ b/peces/esturion-danubio.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Esturión del Danubio (Acipenser gueldenstaedtii) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Toda la información sobre el Esturión del Danubio (Acipenser gueldenstaedtii) en el Ebro: características, hábitat, reproducción, curiosidades y estado de conservación.">
-  <meta name="keywords" content="esturión del Danubio, Acipenser gueldenstaedtii, peces reintroducidos Ebro, ficha esturión, peces río Ebro, ebropeces">
+  <title>Esturión del Danubio (Huso huso) | Especie histórica del Ebro | ebropeces</title>
+  <meta name="description" content="Información sobre el Esturión del Danubio (Huso huso), una especie histórica en el río Ebro: características, hábitat y estado actual.">
+  <meta name="keywords" content="esturión del Danubio, Huso huso, pez histórico Ebro, especies en peligro Ebro, fauna acuática Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/esturion-danubio.html">
-  <link rel="alternate" href="https://tusitio.com/peces/esturion-danubio.html" hreflang="es" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/esturion-danubio.html">
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/esturion-danubio.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="Esturión del Danubio (Huso huso) | Ficha completa | ebropeces">
+  <meta property="og:description" content="Ficha técnica del Esturión del Danubio: hábitat, características y situación actual en el río Ebro.">
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/esturion-danubio.html">
+  <meta property="og:site_name" content="ebropeces">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Esturión del Danubio | Especie histórica del Ebro | ebropeces">
+  <meta name="twitter:description" content="Conoce al Esturión del Danubio (Huso huso), especie emblemática y casi extinta del río Ebro.">
 </head>
 <body>
   <header>
