--- a/peces/fraile-cacho.html
+++ b/peces/fraile-cacho.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Fraile o cacho (Squalius laietanus o Squalius cephalus) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Información sobre el Fraile o cacho (Squalius laietanus o Squalius cephalus), pez autóctono del Ebro: características, hábitat, alimentación y curiosidades.">
-  <meta name="keywords" content="fraile, cacho, Squalius laietanus, Squalius cephalus, peces autóctonos Ebro, ficha cacho, peces río Ebro, ebropeces">
+  <title>Fraile cacho (Leuciscus pyrenaicus) | Pez autóctono del Ebro | ebropeces</title>
+  <meta name="description" content="Conoce al Fraile cacho (Leuciscus pyrenaicus), pez autóctono del río Ebro: características, hábitat, alimentación y comportamiento.">
+  <meta name="keywords" content="fraile cacho, Leuciscus pyrenaicus, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/fraile-cacho.html">
-  <link rel="alternate" href="https://tusitio.com/peces/fraile-cacho.html" hreflang="es" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/fraile-cacho.html">
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/fraile-cacho.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="Fraile cacho (Leuciscus pyrenaicus) | Ficha completa | ebropeces">
+  <meta property="og:description" content="Ficha técnica del Fraile cacho: distribución, ecología y hábitos en el río Ebro.">
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/fraile-cacho.html">
+  <meta property="og:site_name" content="ebropeces">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="Fraile cacho | Pez autóctono del Ebro | ebropeces">
+  <meta name="twitter:description" content="Descubre al Fraile cacho (Leuciscus pyrenaicus), una especie autóctona del río Ebro con importancia ecológica.">
 </head>
 <body>
   <header>
