--- a/peces/gobio-europeo.html
+++ b/peces/gobio-europeo.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Gobio europeo introducido (Gobio gobio) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Ficha del Gobio europeo introducido (Gobio gobio) en el Ebro: características, hábitat, alimentación, reproducción y su impacto ecológico.">
-  <meta name="keywords" content="gobio europeo, Gobio gobio, peces invasores Ebro, ficha gobio, ebropeces">
-  <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/gobio-europeo.html">
-  <link rel="alternate" href="https://tusitio.com/peces/gobio-europeo.html" hreflang="es" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Gobio europeo (Gobio gobio) | Pez autóctono del Ebro | ebropeces</title>
+  <meta name="description" content="Ficha completa del Gobio europeo (Gobio gobio), pez autóctono del río Ebro: características, hábitat, alimentación y comportamiento." />
+  <meta name="keywords" content="gobio europeo, Gobio gobio, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, ebropeces" />
+  <meta name="author" content="mgb42x" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/gobio-europeo.html" />
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/gobio-europeo.html" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../styles.css" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Gobio europeo (Gobio gobio) | Ficha completa | ebropeces" />
+  <meta property="og:description" content="Información detallada del Gobio europeo: distribución, ecología y hábitos en el río Ebro." />
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/gobio-europeo.html" />
+  <meta property="og:site_name" content="ebropeces" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Gobio europeo | Pez autóctono del Ebro | ebropeces" />
+  <meta name="twitter:description" content="Conoce al Gobio europeo (Gobio gobio), un pez autóctono del río Ebro con un papel ecológico importante." />
 </head>
 <body>
   <header>
