--- a/peces/gobio.html
+++ b/peces/gobio.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Gobio (Gobio lozanoi) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Todo sobre el Gobio (Gobio lozanoi), pez autóctono del río Ebro: características, hábitat, alimentación, reproducción y curiosidades.">
-  <meta name="keywords" content="gobio, Gobio lozanoi, peces autóctonos Ebro, ficha gobio, peces río Ebro, ebropeces, fauna ibérica">
-  <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/gobio.html">
-  <link rel="alternate" href="https://tusitio.com/peces/gobio.html" hreflang="es" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Gobio (Gobio gobio) | Pez autóctono del Ebro | ebropeces</title>
+  <meta name="description" content="Ficha detallada del Gobio (Gobio gobio), pez autóctono del río Ebro: características, hábitat, alimentación y comportamiento." />
+  <meta name="keywords" content="gobio, Gobio gobio, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, ebropeces" />
+  <meta name="author" content="mgb42x" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/gobio.html" />
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/gobio.html" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../styles.css" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Gobio (Gobio gobio) | Ficha completa | ebropeces" />
+  <meta property="og:description" content="Información detallada del Gobio: distribución, ecología y hábitos en el río Ebro." />
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/gobio.html" />
+  <meta property="og:site_name" content="ebropeces" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Gobio | Pez autóctono del Ebro | ebropeces" />
+  <meta name="twitter:description" content="Conoce al Gobio (Gobio gobio), un pez autóctono del río Ebro con un papel ecológico importante." />
 </head>
 <body>
   <header>
