--- a/peces/locha-rio.html
+++ b/peces/locha-rio.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Locha de río (Barbatula quignardi) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Descubre la Locha de río (Barbatula quignardi), pez autóctono del Ebro. Ficha completa: características, hábitat, alimentación, reproducción y estado de conservación.">
-  <meta name="keywords" content="locha de río, Barbatula quignardi, peces autóctonos Ebro, ficha locha, peces río Ebro, ebropeces, fauna ibérica">
-  <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/locha-rio.html">
-  <link rel="alternate" href="https://tusitio.com/peces/locha-rio.html" hreflang="es" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Locha río (Cobitis taenia) | Pez autóctono del Ebro | ebropeces</title>
+  <meta name="description" content="Ficha completa de la Locha río (Cobitis taenia), pez autóctono del río Ebro: características, hábitat, alimentación y comportamiento." />
+  <meta name="keywords" content="locha río, Cobitis taenia, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, ebropeces" />
+  <meta name="author" content="mgb42x" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/locha-rio.html" />
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/locha-rio.html" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../styles.css" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Locha río (Cobitis taenia) | Ficha completa | ebropeces" />
+  <meta property="og:description" content="Información detallada de la Locha río: distribución, ecología y hábitos en el río Ebro." />
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/locha-rio.html" />
+  <meta property="og:site_name" content="ebropeces" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Locha río | Pez autóctono del Ebro | ebropeces" />
+  <meta name="twitter:description" content="Conoce a la Locha río (Cobitis taenia), un pez autóctono del río Ebro con un papel ecológico importante." />
 </head>
 <body>
   <header>
