--- a/peces/lucio-perca.html
+++ b/peces/lucio-perca.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Lucio-perca (Sander lucioperca) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Toda la información sobre el Lucio-perca (Sander lucioperca) en el Ebro: características, hábitat, alimentación, reproducción, impacto ecológico y curiosidades.">
-  <meta name="keywords" content="lucio-perca, Sander lucioperca, peces invasores Ebro, ficha lucioperca, pesca deportiva Ebro, ebropeces">
-  <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/lucio-perca.html">
-  <link rel="alternate" href="https://tusitio.com/peces/lucio-perca.html" hreflang="es" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Lucio perca (Esox lucius x Perca fluviatilis) | Pez híbrido del Ebro | ebropeces</title>
+  <meta name="description" content="Ficha del Lucio perca, híbrido entre Lucio y Perca fluviatilis, presente en el río Ebro: características, hábitat y comportamiento." />
+  <meta name="keywords" content="lucio perca, híbrido lucio perca, Esox lucius x Perca fluviatilis, peces río Ebro, fauna acuática Ebro, ebropeces" />
+  <meta name="author" content="mgb42x" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/lucio-perca.html" />
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/lucio-perca.html" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../styles.css" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Lucio perca (Esox lucius x Perca fluviatilis) | Ficha completa | ebropeces" />
+  <meta property="og:description" content="Información detallada del Lucio perca, pez híbrido presente en el río Ebro: ecología y comportamiento." />
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/lucio-perca.html" />
+  <meta property="og:site_name" content="ebropeces" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Lucio perca | Pez híbrido del Ebro | ebropeces" />
+  <meta name="twitter:description" content="Conoce al Lucio perca, híbrido entre Lucio y Perca fluviatilis, que habita en el río Ebro." />
 </head>
 <body>
   <header>
