--- a/peces/lucio.html
+++ b/peces/lucio.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Lucio (Esox lucius) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Toda la información sobre el Lucio (Esox lucius) en el Ebro: características, hábitat, alimentación, reproducción, impacto ecológico y curiosidades.">
-  <meta name="keywords" content="lucio, Esox lucius, peces invasores Ebro, ficha lucio, pesca deportiva Ebro, ebropeces">
-  <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/lucio.html">
-  <link rel="alternate" href="https://tusitio.com/peces/lucio.html" hreflang="es" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Lucio (Esox lucius) | Pez depredador del Ebro | ebropeces</title>
+  <meta name="description" content="Ficha del Lucio (Esox lucius), pez depredador del río Ebro: características, hábitat, alimentación y comportamiento." />
+  <meta name="keywords" content="lucio, Esox lucius, pez depredador Ebro, peces río Ebro, fauna acuática Ebro, ebropeces" />
+  <meta name="author" content="mgb42x" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/lucio.html" />
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/lucio.html" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../styles.css" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Lucio (Esox lucius) | Ficha completa | ebropeces" />
+  <meta property="og:description" content="Información detallada del Lucio: distribución, ecología y hábitos en el río Ebro." />
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/lucio.html" />
+  <meta property="og:site_name" content="ebropeces" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Lucio | Pez depredador del Ebro | ebropeces" />
+  <meta name="twitter:description" content="Conoce al Lucio (Esox lucius), un pez depredador importante en el ecosistema del río Ebro." />
 </head>
 <body>
   <header>
