--- a/peces/pejerrey.html
+++ b/peces/pejerrey.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Pejerrey (Odontesthes bonariensis) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Toda la información sobre el Pejerrey (Odontesthes bonariensis) en el Ebro: características, hábitat, alimentación, reproducción y curiosidades.">
-  <meta name="keywords" content="pejerrey, Odontesthes bonariensis, peces invasores Ebro, ficha pejerrey, ebropeces">
-  <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/pejerrey.html">
-  <link rel="alternate" href="https://tusitio.com/peces/pejerrey.html" hreflang="es" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Pejerrey (Atherina boyeri) | Pez del río Ebro | ebropeces</title>
+  <meta name="description" content="Ficha completa del Pejerrey (Atherina boyeri), pez común en el río Ebro: características, hábitat, alimentación y comportamiento." />
+  <meta name="keywords" content="pejerrey, Atherina boyeri, pez río Ebro, peces autóctonos Ebro, fauna acuática Ebro, ebropeces" />
+  <meta name="author" content="mgb42x" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/pejerrey.html" />
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/pejerrey.html" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../styles.css" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Pejerrey (Atherina boyeri) | Ficha completa | ebropeces" />
+  <meta property="og:description" content="Información detallada del Pejerrey: distribución, ecología y hábitos en el río Ebro." />
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/pejerrey.html" />
+  <meta property="og:site_name" content="ebropeces" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Pejerrey | Pez del río Ebro | ebropeces" />
+  <meta name="twitter:description" content="Conoce al Pejerrey (Atherina boyeri), un pez común del río Ebro con gran importancia ecológica." />
 </head>
 <body>
   <header>
