--- a/peces/siluro.html
+++ b/peces/siluro.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Siluro (Silurus glanis) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Toda la información sobre el Siluro (Silurus glanis), especie invasora del Ebro. Características, impacto ecológico, alimentación y curiosidades.">
-  <meta name="keywords" content="siluro, Silurus glanis, especies invasoras Ebro, peces exóticos Ebro, ficha siluro, peces río Ebro, ebropeces">
-  <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/siluro.html">
-  <link rel="alternate" href="https://tusitio.com/peces/siluro.html" hreflang="es" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Siluro (Silurus glanis) | Pez gigante del río Ebro | ebropeces</title>
+  <meta name="description" content="Ficha completa del Siluro (Silurus glanis), pez gigante del río Ebro: características, hábitat, alimentación y comportamiento." />
+  <meta name="keywords" content="siluro, Silurus glanis, pez gigante Ebro, peces río Ebro, fauna acuática Ebro, ebropeces" />
+  <meta name="author" content="mgb42x" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/siluro.html" />
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/siluro.html" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../styles.css" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Siluro (Silurus glanis) | Ficha completa | ebropeces" />
+  <meta property="og:description" content="Información detallada del Siluro: distribución, ecología y hábitos en el río Ebro." />
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/siluro.html" />
+  <meta property="og:site_name" content="ebropeces" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Siluro | Pez gigante del río Ebro | ebropeces" />
+  <meta name="twitter:description" content="Conoce al Siluro (Silurus glanis), uno de los peces más grandes y emblemáticos del río Ebro." />
 </head>
 <body>
   <header>
