--- a/peces/tenca.html
+++ b/peces/tenca.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Tenca (Tinca tinca) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Toda la información sobre la Tenca (Tinca tinca) en el Ebro: características, hábitat, alimentación, reproducción y curiosidades.">
-  <meta name="keywords" content="tenca, Tinca tinca, peces Ebro, ficha tenca, peces río Ebro, ebropeces">
-  <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/tenca.html">
-  <link rel="alternate" href="https://tusitio.com/peces/tenca.html" hreflang="es" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Tenca (Tinca tinca) | Pez autóctono del río Ebro | ebropeces</title>
+  <meta name="description" content="Ficha completa de la Tenca (Tinca tinca), pez autóctono del río Ebro: características, hábitat, alimentación y comportamiento." />
+  <meta name="keywords" content="tenca, Tinca tinca, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, ebropeces" />
+  <meta name="author" content="mgb42x" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/tenca.html" />
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/tenca.html" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../styles.css" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Tenca (Tinca tinca) | Ficha completa | ebropeces" />
+  <meta property="og:description" content="Información detallada de la Tenca: distribución, ecología y hábitos en el río Ebro." />
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/tenca.html" />
+  <meta property="og:site_name" content="ebropeces" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Tenca | Pez autóctono del río Ebro | ebropeces" />
+  <meta name="twitter:description" content="Conoce a la Tenca (Tinca tinca), un pez autóctono que habita en el río Ebro." />
 </head>
 <body>
   <header>
