--- a/peces/trucha-comun.html
+++ b/peces/trucha-comun.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Trucha común (Salmo trutta) | Ficha completa | ebropeces</title>
-  <meta name="description" content="Toda la información sobre la Trucha común (Salmo trutta) en el río Ebro: características, hábitat, alimentación, reproducción y estado de conservación.">
-  <meta name="keywords" content="trucha común, Salmo trutta, peces autóctonos Ebro, ficha trucha, peces río Ebro, ebropeces, pesca trucha">
-  <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://tusitio.com/peces/trucha-comun.html">
-  <link rel="alternate" href="https://tusitio.com/peces/trucha-comun.html" hreflang="es" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <title>Trucha común (Salmo trutta) | Pez emblemático del río Ebro | ebropeces</title>
+  <meta name="description" content="Ficha completa de la Trucha común (Salmo trutta), pez emblemático del río Ebro: características, hábitat, alimentación y comportamiento." />
+  <meta name="keywords" content="trucha común, Salmo trutta, pez río Ebro, peces autóctonos Ebro, fauna acuática Ebro, ebropeces" />
+  <meta name="author" content="mgb42x" />
+  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/trucha-comun.html" />
+  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/trucha-comun.html" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="../styles.css" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Trucha común (Salmo trutta) | Ficha completa | ebropeces" />
+  <meta property="og:description" content="Información detallada de la Trucha común: distribución, ecología y hábitos en el río Ebro." />
+  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/trucha-comun.html" />
+  <meta property="og:site_name" content="ebropeces" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Trucha común | Pez emblemático del río Ebro | ebropeces" />
+  <meta name="twitter:description" content="Conoce a la Trucha común (Salmo trutta), un pez emblemático que habita en el río Ebro." />
 </head>
 <body>
   <header>
