netli index.html

--- a/index.html
+++ b/index.html
@@ -9,25 +9,23 @@
   <meta name="author" content="mgb42x">
   <meta name="robots" content="index, follow">
 
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/">
-  <link rel="alternate" href="https://mgb42x.github.io/ebropeces/" hreflang="es" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/">
+  <link rel="alternate" href="https://ebropeces.netlify.app/" hreflang="es" />
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 
-  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Peces del río Ebro | ebropeces">
   <meta property="og:description" content="Guía visual y descriptiva de los peces autóctonos y alóctonos del río Ebro en España. Descubre su diversidad y aprende más.">
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/">
+  <meta property="og:url" content="https://ebropeces.netlify.app/">
   <meta property="og:site_name" content="ebropeces">
-  <meta property="og:image" content="https://mgb42x.github.io/ebropeces/img/og-ebropeces.jpg">
+  <meta property="og:image" content="https://ebropeces.netlify.app/img/og-ebropeces.jpg">
 
-  <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Peces del río Ebro | ebropeces">
   <meta name="twitter:description" content="Guía visual y descriptiva de los peces autóctonos y alóctonos del río Ebro en España. Descubre su diversidad y aprende más.">
-  <meta name="twitter:image" content="https://mgb42x.github.io/ebropeces/img/og-ebropeces.jpg">
+  <meta name="twitter:image" content="https://ebropeces.netlify.app/img/og-ebropeces.jpg">
 </head>
 <body>
   <header>
