--- a/peces/alburno.html
+++ b/peces/alburno.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Información completa sobre el Alburno (Alburnus alburnus), especie invasora en el río Ebro: identificación, hábitat, alimentación y su impacto ecológico.">
   <meta name="keywords" content="alburno, Alburnus alburnus, especie invasora Ebro, peces Ebro, fauna acuática Ebro, peces río Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/alburno.html">
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/alburno.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/alburno.html">
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/alburno.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Alburno (Alburnus alburnus) | Ficha completa | ebropeces">
   <meta property="og:description" content="Ficha técnica del Alburno: origen, hábitat, comportamiento y situación en el río Ebro.">
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/alburno.html">
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/alburno.html">
   <meta property="og:site_name" content="ebropeces">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Alburno | Especie invasora del Ebro | ebropeces">
