--- a/peces/barbo-comun.html
+++ b/peces/barbo-comun.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Información completa sobre el Barbo común (Luciobarbus bocagei), pez autóctono del río Ebro: morfología, hábitat, reproducción y ecología.">
   <meta name="keywords" content="barbo común, Luciobarbus bocagei, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, biodiversidad Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/barbo-comun.html">
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/barbo-comun.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/barbo-comun.html">
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/barbo-comun.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Barbo común (Luciobarbus bocagei) | Ficha completa | ebropeces">
   <meta property="og:description" content="Ficha técnica del Barbo común: distribución, comportamiento, alimentación y papel ecológico en el río Ebro.">
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/barbo-comun.html">
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/barbo-comun.html">
   <meta property="og:site_name" content="ebropeces">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Barbo común | Pez autóctono del Ebro | ebropeces">
