--- a/peces/barbo-montana.html
+++ b/peces/barbo-montana.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Información completa sobre el Barbo de montaña (Luciobarbus graellsii), pez autóctono del río Ebro: características, hábitat, reproducción y conservación.">
   <meta name="keywords" content="barbo de montaña, Luciobarbus graellsii, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, barbo Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/barbo-montana.html">
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/barbo-montana.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/barbo-montana.html">
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/barbo-montana.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Barbo de montaña (Luciobarbus graellsii) | Ficha completa | ebropeces">
   <meta property="og:description" content="Ficha técnica del Barbo de montaña: hábitat, comportamiento, alimentación y presencia en el río Ebro.">
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/barbo-montana.html">
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/barbo-montana.html">
   <meta property="og:site_name" content="ebropeces">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Barbo de montaña | Pez autóctono del Ebro | ebropeces">
